--- a/404.html
+++ b/404.html
@@ -1,21 +1,21 @@
 <!doctype html><html lang=en>
 <head>
 <meta charset=utf-8>
-<title>Categories &#8211; 🍉 Delay Line Memory</title>
+<title>404 Page not found &#8211; 🍉 Delay Line Memory</title>
 <meta name=description content="On Life, Software & the Universe">
 <meta name=author content="Santosh Heigrujam">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=/index.xml rel=alternate type=application/rss+xml title="🍉 Delay Line Memory">
 <meta name=ROBOTS content="INDEX, FOLLOW">
-<meta property="og:title" content="Categories">
+<meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="On Life, Software & the Universe">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://heisantosh.github.io/categories/">
+<meta property="og:url" content="https://heisantosh.github.io/404.html">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Categories">
+<meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="On Life, Software & the Universe">
-<meta itemprop=name content="Categories">
+<meta itemprop=name content="404 Page not found">
 <meta itemprop=description content="On Life, Software & the Universe">
 <link href=/css/custom.css rel=stylesheet>
 </head>
@@ -32,9 +32,10 @@
 <a type=application/rss+xml href=/index.xml>RSS</a>
 </div>
 </header>
-<h2>Categories</h2>
-<ul class=posts>
-</ul>
+<h1>404 - Not Found</h1>
+<p>
+<a href=https://heisantosh.github.io/>Go to homepage</a>
+</p>
 <footer>
 </footer>
 <script></script>
