--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,49 @@
-<!doctype html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><meta name=description content="Your site description"><link rel="shortcut icon" href=http://heisantosh.github.io/favicon.ico><link rel=stylesheet href=/css/style.min.css><title>About</title></head><body><header id=banner><h2><a href=http://heisantosh.github.io/>Delay Line Memory</a></h2><nav><ul><li><a href=/ title=posts>posts</a></li><li><a href=/about/ title=about>about</a></li></ul></nav></header><main id=content><article><header id=post-header><h1>About</h1></header><p>🧮 🧭 ⚽</p><p>Hi! My name is Santosh Heigrujam. I&rsquo;m a software engineer. This blog is an attempt to share my notes on software, life and everything.</p><p>🐱 github: <a href=https://github.com/heisantosh>https://github.com/heisantosh</a><br>🦉 twitter: <a href=https://twitter.com/heisantosh>https://twitter.com/heisantosh</a></p><img style=margin-top:4em src=https://spectrum.ieee.org/image/29923 class=img-rounded alt="Delay Line Memory"></article></main><footer id=footer></footer></body></html>
+<!doctype html><html lang=en>
+<head>
+<meta charset=utf-8>
+<title>Hello There. &#8211; 🍉 Delay Line Memory</title>
+<meta name=description content="My name is Santosh Heigrujam. I&rsquo;m a software engineer by profession. This is my blog where I share mainly about software systems.">
+<meta name=author content="Santosh Heigrujam">
+<meta http-equiv=x-ua-compatible content="IE=edge">
+<meta name=viewport content="width=device-width,initial-scale=1">
+<link href=/index.xml rel=alternate type=application/rss+xml title="🍉 Delay Line Memory">
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<meta property="og:title" content="Hello There.">
+<meta property="og:description" content="My name is Santosh Heigrujam. I&rsquo;m a software engineer by profession. This is my blog where I share mainly about software systems.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://heisantosh.github.io/about/"><meta property="article:section" content>
+<meta name=twitter:card content="summary">
+<meta name=twitter:title content="Hello There.">
+<meta name=twitter:description content="My name is Santosh Heigrujam. I&rsquo;m a software engineer by profession. This is my blog where I share mainly about software systems.">
+<meta itemprop=name content="Hello There.">
+<meta itemprop=description content="My name is Santosh Heigrujam. I&rsquo;m a software engineer by profession. This is my blog where I share mainly about software systems.">
+<meta itemprop=wordCount content="22">
+<meta itemprop=keywords content>
+<link href=/css/custom.css rel=stylesheet>
+</head>
+<body>
+<header>
+<a href=https://heisantosh.github.io/ class=alternate>
+<h1>🍉 Delay Line Memory</h1>
+</a>
+<div class=social>
+<a href=/about/>About</a>
+<a href=https://github.com/heisantosh>Github</a>
+<a href=https://twitter.com/heisantosh>Twitter</a>
+<a href=/reads/>Reads</a>
+<a type=application/rss+xml href=/index.xml>RSS</a>
+</div>
+</header>
+<div class=post-header>
+<small class=post-meta><span class=author>Santosh Heigrujam</span></small>
+<h2>Hello There.</h2>
+</div>
+<article class=post-content>
+<p>My name is Santosh Heigrujam. I&rsquo;m a software engineer by profession. This is my blog where I share mainly about software systems.</p>
+<p><img src="https://images.unsplash.com/photo-1592513735373-ae19bac7fde8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt></p>
+</article>
+<footer>
+</footer>
+<script></script>
+</body>
+</html>
