chore: blog update

--- a/404.html
+++ b/404.html
@@ -1,43 +1,52 @@
-<!doctype html><html lang=en>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset=utf-8>
-<title>404 Page not found &#8211; 🍉 Delay Line Memory</title>
-<meta name=description content="On Life, Software & the Universe">
-<meta name=author content="Santosh Heigrujam">
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<link href=/index.xml rel=alternate type=application/rss+xml title="🍉 Delay Line Memory">
-<meta name=ROBOTS content="INDEX, FOLLOW">
-<meta property="og:title" content="404 Page not found">
-<meta property="og:description" content="On Life, Software & the Universe">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://heisantosh.github.io/404.html">
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="404 Page not found">
-<meta name=twitter:description content="On Life, Software & the Universe">
-<meta itemprop=name content="404 Page not found">
-<meta itemprop=description content="On Life, Software & the Universe">
-<link href=/css/custom.css rel=stylesheet>
+  <meta charset="utf-8">
+
+  <title>404 Page not found &#8211; 🍉 Delay Line Memory</title>
+
+  
+  <meta name="description" content="On computer software systems">
+  
+  <meta name="author" content="">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="🍉 Delay Line Memory" />
+
+  <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
+
+  <link href="/css/custom.css" rel="stylesheet">
 </head>
+
 <body>
-<header>
-<a href=https://heisantosh.github.io/ class=alternate>
-<h1>🍉 Delay Line Memory</h1>
-</a>
-<div class=social>
-<a href=/about/>About</a>
-<a href=https://github.com/heisantosh>Github</a>
-<a href=https://twitter.com/heisantosh>Twitter</a>
-<a href=/reads/>Reads</a>
-<a type=application/rss+xml href=/index.xml>RSS</a>
-</div>
-</header>
+  <header>
+    <a href="https://heisantosh.github.io/" class="alternate">
+      <h1>🍉 Delay Line Memory</h1>
+    </a>
+    <div class="social">
+      <a href="/about/">About</a>
+      <a href="https://github.com/heisantosh">Github</a>
+      <a href="https://x.com/heisantosh">X</a>
+      <a href="/reads/">Reads</a>
+      <a type="application/rss+xml" href="/index.xml">RSS</a>
+    </div>
+  </header>
+
+
 <h1>404 - Not Found</h1>
+
 <p>
-<a href=https://heisantosh.github.io/>Go to homepage</a>
+  <a href="https://heisantosh.github.io/">Go to homepage</a>
 </p>
-<footer>
-</footer>
-<script></script>
+
+
+  <footer>
+  </footer>
+
+  <script>
+  </script>
 </body>
 </html>
+
